--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>WhatsDirect Pro</title>
+    <meta property="og:title" content="WhatsApp Direct Messenger">
+    <meta property="og:description" content="Navigate the 'WhatsApp par hi bhej do' scenario with ease. Direct message without saving contacts, generate personal chat links, use canned responses in multiple languages, and ensure 100% privacy. Your seamless WhatsApp experience is just a click away.">
+    <title>Whatsapp Direct Messenger</title>
     <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
